--- a/chess.html
+++ b/chess.html
@@ -5,10 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chess</title>
   </head>
-  <body>
-    <h2 style="text-align: center">Javascript Chess</h2>
+  <body
+    style="
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+    "
+  >
+    <h2 style="text-align: center; margin-right: 50px; margin-left: 0px">
+      Javascript Chess
+    </h2>
+
     <div id="board" style="text-align: center"></div>
-    <div id="info" style="text-align: center">Chess</div>
+
+    <div id="info" style="text-align: center; margin: 50px">Chess</div>
     <script>
       var map = Array();
       var inf = Array();
@@ -34,14 +46,14 @@
         can_black_castle_left = true;
         can_black_castle_right = true;
         map = [
-          ["R", " ", " ", " ", " ", " ", "p", "r"],
-          [" ", " ", " ", " ", " ", " ", "p", " "],
-          [" ", " ", " ", " ", " ", " ", "p", " "],
-          [" ", " ", " ", " ", " ", " ", " ", " "],
-          ["K", " ", " ", " ", " ", " ", "p", "k"],
-          [" ", " ", " ", " ", " ", " ", "p", " "],
-          [" ", " ", " ", " ", " ", " ", "p", " "],
-          ["R", " ", " ", " ", " ", " ", "p", "r"],
+          ["R", "P", " ", " ", " ", " ", "p", "r"],
+          ["N", "P", " ", " ", " ", " ", "p", "n"],
+          ["B", "P", " ", " ", " ", " ", "p", "b"],
+          ["Q", "P", " ", " ", " ", " ", "p", "q"],
+          ["K", "P", " ", " ", " ", " ", "p", "k"],
+          ["B", "P", " ", " ", " ", " ", "p", "b"],
+          ["N", "P", " ", " ", " ", " ", "p", "n"],
+          ["R", "P", " ", " ", " ", " ", "p", "r"],
         ];
       }
 
@@ -464,10 +476,10 @@
         }
       }
       function show_map() {
-        html = "<table border='1' cellpadding='2' cellspacing='0' > ";
+        html = "<table border='1' cellpadding='2' cellspacing='0'  > ";
         for (var y = 7; y >= 0; y--) {
           html += "<tr>";
-          html += "<td style='font-size: 10px;'>&nbsp" + y + "&nbsp</td>";
+          html += "<td style='font-size: 10px; ;'>&nbsp" + y + "&nbsp</td>";
           for (var x = 0; x <= 7; x++) {
             if (inf[x][y] == " ") color = (x + y) % 2 ? "#eeffee" : "#abcdef";
             else color = inf[x][y] == "1" ? "#aaffaa" : "#ffaaaa";
