renaming file to index

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       margin: 0;
     "
   >
-    <h2 style="text-align: center; margin-right: 50px; margin-left: 0px">
+    <h2 style="text-align: center; margin-right: 50px; align-items: center">
       Javascript Chess
     </h2>
 
@@ -487,7 +487,7 @@
             html +=
               `<td style="height: 50px; width: 50px; background-color:` +
               color +
-              `;text-align:center; font-size: 40px; "` +
+              `;text-align:center; font-size: 36px; "` +
               `onclick= click_box(` +
               x +
               `,` +
